# simplemath

./: README.md  requirements.txt  setup.cfg  tox.ini
simplemath/: __main__.py  get_numbers.py  hello.py  numbers.py  print_numbers.py
simplemath/data/: seq.csv
tests/: test_numbers.py
