[metadata]

name = simplemath
version = 0.0.1
author = Frank3W
description = A package for simple math computation.
long_description = file:  README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language ::  Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = simplemath

packages = find:
python_requires = >= 3.6
install_requires =
    numpy >= 1.9.1


[options.packages.find]
where = simplemath

[options.entry_points]
console_scripts =
    get_exp = simplemath.get_numbers:main

