[metadata]

name = simplemath
version = 0.0.1
author = Frank3W
description = A package for simple math computation.
long_description = file:  README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language ::  Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires =
    numpy >= 1.9.1
    pandas >= 1.1.0
    click >= 7.0.0

[options.package_data]
simplemath = data/*.csv

[options.entry_points]
console_scripts =
    print_numbers = simplemath.print_numbers:main
    hello = simplemath.hello:hello

